# 20465-System-Programming-Laboratory-Final-Project

./: CMakeLists.txt  README.md  assembler.c  assembler_controller.c  assembler_controller.h  ast.c  ast.h  bool.h  boolean.h  cmp_data.c  cmp_data.h  code_convert.c  code_convert.h  defines.h  errors.c  errors.h  first_phase.c  first_phase.h  general.h  hardware.c  hardware.h  label_data.c  label_data.h  label_trie.c  label_trie.h  lable_trie.c  lable_trie.h  macro_data.c  macro_data.h  macro_list.c  macro_list.h  makefile  mappings.c  mappings.h  output_files.c  output_files.h  parcer.c  parser.c  parser.h  phase_controller.c  (+16 more)
ExecutionReport/CorrectTest/: testCorrect.am  testCorrect.as  testCorrect.ent  testCorrect.ext  testCorrect.ob
ExecutionReport/CourseTest/: testCourseBook.ob
ExecutionReport/LogicErrors/: output_logicErrors  testLogicErrors.am  testLogicErrors.as
ExecutionReport/MacroErrors/: output_macroErrors  testMacroErrors.am  testMacroErrors.as
ExecutionReport/SyntaxErrors/: output_syntaxErrors  testSyntaxErrors.am  testSyntaxErrors.as
assembler/headers/: assembler_controller.h  code_convert.h  defines.h  first_phase.h  parser.h  phase_controller.h  preprocessor.h  second_phase.h
assembler/sources/: assembler.c  assembler_controller.c  code_convert.c  first_phase.c  parser.c  phase_controller.c  preprocessor.c  second_phase.c
structures/headers/: ast.h  cmp_data.h  errors.h  label_data.h  macro_data.h  mappings.h  trie.h
structures/sources/: ast.c  cmp_data.c  errors.c  label_data.c  macro_data.c  mappings.c  trie.c
utils/headers/: boolean.h  output_files.h  utils.h
utils/sources/: output_files.c  utils.c
